# mlh-pde

./: .coverage  .dockerignore  .env.example  Dockerfile  README.md  RUNBOOK.md  conftest.py  docker-compose.yml  fire_drill.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  alerting.py  cache.py  database.py  logging_config.py  metrics_store.py  prometheus_metrics.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  products.py  url.py  users.py
app/templates/: dashboard.html
github/workflows/: ci.yml
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml  hackathon.json
scaling/: docker-compose.yml
scaling/load_test/: k6_test.js
scaling/nginx/: nginx.conf
seed/: events.csv  seed.py  urls.csv  users.csv
tests/: test_graceful.py  test_health.py  test_integration.py  test_url.py
